# blog-research

./: .gitignore  README.md
credit-limit-debiasing/: README.ja.md  README.ko.md  README.md  credit_limit_debiasing.ja.ipynb  credit_limit_debiasing.ko.ipynb  download_data.py  requirements.txt
ssl-credit-risk/: .gitignore  README.ja.md  README.ko.md  README.md  pyproject.toml
ssl-credit-risk/configs/finetune/: default.yaml
ssl-credit-risk/configs/ssl/: _base.yaml  contrastive.yaml  hybrid.yaml  masked.yaml  nextstep.yaml
ssl-credit-risk/reports/: final_summary.md
ssl-credit-risk/reports/figures/: ablation_recovery.json  multiseed_summary.json
ssl-credit-risk/reports/paper/: draft.md  paper.tex  refs.bib
ssl-credit-risk/scripts/: analyze_feature_importance.py  check_env.py  extract_remaining_encoders.sh  fit_tokenizer.py  make_augmented_features.py  phase5_make_ablations.py  phase5_segment_analysis.py  plot_ablation_recovery.py  plot_few_shot.py  plot_multiseed_errorbar.py  run_extra_seeds.sh  run_few_shot.sh  run_oot.sh  run_phase2_all.sh  run_phase3_finetune.sh  run_phase5_C_multienc.sh  run_phase5_D_seeds.sh  run_phase5_ablation.sh
ssl-credit-risk/src/amex/: __init__.py
ssl-credit-risk/src/amex/baseline/: lgbm.py  ssl_features.py
ssl-credit-risk/src/amex/evaluation/: metrics.py  validate_oof.py
ssl-credit-risk/src/amex/finetune/: full_finetune.py  linear_probe.py
ssl-credit-risk/src/amex/models/: transformer.py
ssl-credit-risk/src/amex/ssl/: dataset.py  lightning_module.py  objectives.py  pretrain.py  tokenizer.py
ssl-credit-risk/tests/: test_metrics.py  test_ssl_objectives.py  test_ssl_tokenizer.py  test_transformer.py
ssl-credit-risk/tests/fixtures/: README.md
tabfm-credit/: README.ja.md  README.ko.md  README.md  requirements.txt  tabfm_credit.ja.ipynb  tabfm_credit.ko.ipynb
