[project]
name = "amex-ssl"
version = "0.1.0"
description = "Self-supervised pretraining on transaction sequences for consumer credit default prediction (AMEX 2022)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "amex-ssl researcher" }]
license = { text = "MIT" }

dependencies = [
  # Data
  "polars>=1.15,<2",
  "pyarrow>=17,<20",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "scikit-learn>=1.5,<2",
  # GBM
  "lightgbm>=4.5,<5",
  "xgboost>=2.1,<3",
  # Experiment tracking
  "wandb>=0.18,<1",
  # Configuration
  "hydra-core>=1.3,<2",
  "omegaconf>=2.3,<3",
  # Data version control
  "dvc>=3.55,<4",
  # Kaggle
  "kaggle>=1.6,<2",
  # CLI / utils
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "tqdm>=4.66,<5",
  "pydantic>=2.8,<3",
  "matplotlib>=3.10.9",
]

[project.optional-dependencies]
# Deep learning — install only when Phase 2 starts (heavy, CUDA-dependent)
dl = [
  "torch>=2.4,<3",
  "pytorch-lightning>=2.4,<3",
  "accelerate>=0.34,<2",
  "transformers>=4.45,<5",
]
# Large shuffles when polars streaming cannot fit
dask = [
  "dask[complete]>=2024.9,<2026",
]

[dependency-groups]
dev = [
  "ruff>=0.7,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "pre-commit>=4,<5",
  "ipykernel>=6.29,<7",
  "jupyterlab>=4.2,<5",
  "types-tqdm",
  "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amex"]

# -------------------- uv: PyTorch CUDA index --------------------
# On Windows/Linux the default PyTorch wheels from PyPI are CPU-only.
# This routes torch through the official CUDA 12.4 wheel index so that
# `uv sync --extra dl` picks up GPU-enabled builds.
# Driver 595+ (CUDA 13.x) is forward-compatible with cu124 runtime.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]

# -------------------- Ruff --------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = ["notebooks", "data", "reports", ".venv"]

[tool.ruff.lint]

select = [
  "E", "F", "W",          # pyflakes / pycodestyle
  "I",                     # isort
  "UP",                    # pyupgrade
  "B",                     # bugbear
  "SIM",                   # simplify
  "RUF",                   # ruff-specific
  "N",                     # pep8-naming
  "C4",                    # comprehensions
  "PTH",                   # use pathlib
  "TID",                   # tidy imports
  "PL",                    # pylint subset
  "NPY",                   # numpy
  "PD",                    # pandas-vet
]
ignore = [
  "E501",                  # line length handled by formatter
  "PLR0913",               # too many args (ML configs are wide)
  "PLR2004",               # magic values (acceptable in research code)
  "N803", "N806",          # ML conventions use uppercase (X, Y, W, B)
  "PLC0415",               # lazy/conditional imports are intentional (kaggle, wandb, torch)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"notebooks/**" = ["E402", "F401"]

[tool.ruff.lint.flake8-bugbear]
# typer's documented pattern uses Option/Argument calls as defaults; B008 doesn't apply.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------- mypy --------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/amex"]
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false  # fights with ignore_missing_imports on torch/lightning/etc.
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# torch / lightning have partial stubs; we must subclass torch.nn.Module etc.
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
  "lightgbm.*",
  "xgboost.*",
  "wandb.*",
  "kaggle.*",
  "dvc.*",
  "dask.*",
  "polars.*",
  "sklearn.*",
  "torch",
  "torch.*",
  "pytorch_lightning",
  "pytorch_lightning.*",
  "transformers",
  "transformers.*",
  "accelerate",
  "accelerate.*",
  "hydra",
  "hydra.*",
  "omegaconf",
  "omegaconf.*",
]
ignore_missing_imports = true

# -------------------- pytest --------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
  "slow: long-running tests",
  "gpu: requires CUDA",
  "data: requires AMEX raw data on disk",
]

# -------------------- coverage --------------------
[tool.coverage.run]
branch = true
source = ["src/amex"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
